# ETL_Stream_Snowflake

./: .flake8  .gitattributes  README.md  create_structure.py  pyproject.toml  requirements.txt  utility_steps.py
.github/workflows/: ci-cd.yml
app/: _utils.txt  config.py  lambda_handler.py  logger.py  utils.py
app/clients/: http_client.py  secrets_manager.py
app/connectors/: s3_client.py  snowflake_client.py
app/etl/: pipeline.py
infra/: step_function_definition.json
tests/: test_pipeline.py
tests/functional/: test_lambda_handler.py  test_lambda_pipeline.py
tests/integration/: test_snowflake_integration.py
tests/unit/: test_pipeline_unit.py  test_utils.py
